support 3.2.0 net throw key (default z)

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       #keyMButton { left: 1580px; }
       #keyRButton { left: 1635px; }
 
+      .skill-net {
+        position: absolute;
+        top: 885px;
+        left: 1629px;
+        width: 49px;
+        height: 49px;
+        background-color: rgba(255, 255, 255, 0);
+      }
+
       .shift {
         position: absolute;
         top: 975px;
@@ -110,6 +119,8 @@
     <div class="skill-upper waves-effect waves-light" id="keyLButton"></div>
     <div class="skill-upper waves-effect waves-light" id="keyMButton"></div>
     <div class="skill-upper waves-effect waves-light" id="keyRButton"></div>
+
+    <div class="skill-net waves-effect waves-light" id="keyz"></div>
 
     <div class="detonate waves-effect waves-light" id="keyd"></div>
 
